# Zoidtekc-Toolkit

./: .gitignore  README.md  config_notes_hyprland  indexy.py  mappy.py  pycat.py
make-tool/: makedot.py  pyproject.toml  requirements.txt
make-tool/dotpy_toolkit/indexy/: indexy.py
make-tool/dotpy_toolkit/makedot/: makedot.py
make-tool/dotpy_toolkit/mappy/: mappy.py
make-tool/dotpy_toolkit/pycat/: pycat.py
make-tool/dotpy_toolkit/pyxpress/: pyxpress.py
make-tool/make-dotpy/: makedot.py  pyscope.py
pytransfer/: pyxpress.py
unifier/: __init__.py  pyproject.toml  unifier.py
